// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hidden if dismissed 1`] = `
<div
  className="AnalyticsNudge"
>
  <div>
    <span>
      Okay, opting you out of telemetry. If you change your mind, you can run
       
      <pre>
        tilt analytics opt in
      </pre>
       in your terminal. 
    </span>
    <span
      className="AnalyticsNudge-buttons"
    >
      <button
        onClick={[Function]}
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;

exports[`hides nudge if !needsNudge and no state 1`] = `
<div
  className="AnalyticsNudge"
>
  <div>
    <span>
      Welcome to Tilt! Usage data helps us improve; will you contribute? (
      <a
        href="https://github.com/windmilleng/tilt#telemetry-and-privacy"
        target="_blank"
      >
        Read more
      </a>
      .) 
    </span>
    <span
      className="AnalyticsNudge-buttons"
    >
      <button
        onClick={[Function]}
      >
        Yes, I want to help!
      </button>
      <button
        onClick={[Function]}
      >
        No, I'd rather not.
      </button>
    </span>
  </div>
</div>
`;

exports[`shows failure message with response body 1`] = `
<div
  className="AnalyticsNudge is-visible"
>
  <div>
    <span>
      Oh no, something went wrong! Request failed with:
      <div
        className="AnalyticsNudge-err"
      >
        <span>
          something is not right! something is quite wrong!
        </span>
      </div>
      <a
        href="https://tilt.dev/contact"
        target="_blank"
      >
        Contact us
      </a>
      . 
    </span>
    <span
      className="AnalyticsNudge-buttons"
    >
      <button
        onClick={[Function]}
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;

exports[`shows nudge if needsNudge 1`] = `
<div
  className="AnalyticsNudge is-visible"
>
  <div>
    <span>
      Welcome to Tilt! Usage data helps us improve; will you contribute? (
      <a
        href="https://github.com/windmilleng/tilt#telemetry-and-privacy"
        target="_blank"
      >
        Read more
      </a>
      .) 
    </span>
    <span
      className="AnalyticsNudge-buttons"
    >
      <button
        onClick={[Function]}
      >
        Yes, I want to help!
      </button>
      <button
        onClick={[Function]}
      >
        No, I'd rather not.
      </button>
    </span>
  </div>
</div>
`;

exports[`shows request-in-progress message 1`] = `
<div
  className="AnalyticsNudge is-visible"
>
  <span>
    Okay, making it so...
  </span>
</div>
`;

exports[`shows success message: opt in 1`] = `
<div
  className="AnalyticsNudge is-visible"
>
  <div>
    <span>
      Thanks for helping us improve Tilt for you and everyone! (You can change your mind by running 
      <pre>
        tilt analytics opt out
      </pre>
       in your terminal.) 
    </span>
    <span
      className="AnalyticsNudge-buttons"
    >
      <button
        onClick={[Function]}
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;

exports[`shows success message: opt out 1`] = `
<div
  className="AnalyticsNudge is-visible"
>
  <div>
    <span>
      Okay, opting you out of telemetry. If you change your mind, you can run
       
      <pre>
        tilt analytics opt in
      </pre>
       in your terminal. 
    </span>
    <span
      className="AnalyticsNudge-buttons"
    >
      <button
        onClick={[Function]}
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
